--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "sockjs-client": "^1.6.0",
+    "stompjs": "^2.3.3",
     "vue": "^2.6.14"
   },
   "devDependencies": {
@@ -19,6 +21,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "fs-extra": "^10.0.1",
+    "net": "^1.0.2",
+    "sass": "^1.49.9",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
